[tool.poetry]
name = "portfolio-risk-analysis"
version = "0.1.0"
description = ""
authors = ["William Flemmer <flemmerwill@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.1.1"
yfinance = "^0.2.37"
matplotlib = "^3.8.4"
pandas = "^2.2.1"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
